--- a/.gitlab/ci/docker/ubuntu2004/kokkos-hip/Dockerfile
+++ b/.gitlab/ci/docker/ubuntu2004/kokkos-hip/Dockerfile
@@ -2,20 +2,21 @@ FROM rocm/dev-ubuntu-20.04
 LABEL maintainer "Vicente Adolfo Bolea Sanchez<vicente.bolea@kitware.com>"
 
 # Base dependencies for building VTK-m projects
-RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-      cmake \
-      curl \
-      g++ \
-      git \
+RUN apt update && \
+    DEBIAN_FRONTEND=noninteractive apt install -y --no-install-recommends \
+    curl \
+    g++ \
+    git \
 
 
-      libmpich-dev \
-      libomp-dev \
-      mpich \
-      ninja-build \
-      rsync \
-      ssh \
-      software-properties-common
+    libmpich-dev \
+    libomp-dev \
+    mpich \
+    ninja-build \
+    rsync \
+    ssh \
+    && \
+    apt clean
 
 
 
@@ -36,11 +37,10 @@ ENV CMAKE_PREFIX_PATH "/opt/rocm/lib/cmake:/opt/rocm/lib:${CMAKE_PREFIX_PATH}"
 ENV CMAKE_GENERATOR "Ninja"
 
 # Build and install Kokkos
-ARG KOKKOS_VERSION=3.4.01
+ARG KOKKOS_VERSION=3.6.00
 COPY kokkos_cmake_config.cmake kokkos_cmake_config.cmake
 RUN curl -L https://github.com/kokkos/kokkos/archive/refs/tags/$KOKKOS_VERSION.tar.gz | tar -xzf - && \
-		cmake -S kokkos-$KOKKOS_VERSION -B build -C kokkos_cmake_config.cmake                          && \
-		cmake --build build -v                                                                         && \
-		sudo cmake --install build
-
-RUN rm -rf build
+    cmake -S kokkos-$KOKKOS_VERSION -B build -C kokkos_cmake_config.cmake                          && \
+    cmake --build build -v                                                                         && \
+    cmake --install build                                                                          && \
+    rm -rf build kokkos-$KOKKOS_VERSION
