--- a/.gitattributes
+++ b/.gitattributes
@@ -10,7 +10,8 @@
 
 
 *.cmake          whitespace=tab-in-indent
-*.md             whitespace=tab-in-indent conflict-marker-size=79 -whitespace
+*.md             whitespace=tab-in-indent whitespace=-blank-at-eol conflict-marker-size=79 -whitespace
+*.md.tmpl        whitespace=tab-in-indent whitespace=-blank-at-eol conflict-marker-size=79 -whitespace
 *.rst            whitespace=tab-in-indent conflict-marker-size=79
 *.txt            whitespace=tab-in-indent
 vtkm/thirdparty/diy/vtkmdiy/**           -format.clang-format -whitespace
