--- a/.gitlab/ci/docker/opensuse/Dockerfile
+++ b/.gitlab/ci/docker/opensuse/Dockerfile
@@ -25,13 +25,17 @@ RUN zypper refresh && \
 
       hdf5-devel \
       libgomp1 \
-      mpich \
-      mpich-devel \
+      libucp-devel \
+      mpich-ofi \
+      mpich-ofi-devel \
       ninja \
+      openucx-tools \
       python311 \
       python311-scipy \
       tbb-devel && \
     zypper clean --all
+
+ENV fI_PROVIDER=sockets
 
 
 
