--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -40,7 +40,7 @@ sphinx:
 
 python:
   install:
-  - requirements: docs/requirements.txt
+  - requirements: docs/users-guide/requirements.txt
 
 formats:
 - epub
