--- a/.gitlab/ci/frontier.yml
+++ b/.gitlab/ci/frontier.yml
@@ -37,6 +37,7 @@
     # The user default module list should not exist
     # craype;rocm;gcc should be loaded first
     JOB_MODULES: >-
+      DefApps
       craype-accel-amd-gfx90a
       gcc/12
       cmake
@@ -49,6 +50,21 @@
     OLCF_SERVICE_ACCOUNT: "ums033_auser"
     VTKM_SETTINGS: kokkos+hip+gfx90a+frontier+ccache+no_rendering
   interruptible: true
+
+setup_modules:
+  stage: .pre
+  extends:
+    - .run_frontier_ci
+  tags: [frontier, shell]
+  variables:
+    CUSTOM_CI_BUILDS_DIR: "/lustre/orion/ums033/scratch/ums033_auser/ci/vtk-m/runtime"
+    OLCF_SERVICE_ACCOUNT: "ums033_auser"
+    GIT_STRATEGY: none
+  script:
+    - module load DefApps
+
+
+    - module save
 
 .setup_env_ecpci: &setup_env_ecpci |
   module purge
@@ -70,15 +86,6 @@ build:frontier_gcc_hip:
     - ccache -z
     - ccache -s
     - .gitlab/ci/config/kokkos.sh "$CI_BUILDS_DIR" "3.7.01" $KOKKOS_OPTS
-
-
-
-
-
-
-
-
-
   script:
     - cmake -V -P .gitlab/ci/config/gitlab_ci_setup.cmake
     - ctest -VV -S .gitlab/ci/ctest_configure.cmake
