--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,3 +78,43 @@ jobs:
       - run: ctest -VV -S .gitlab/ci/ctest_configure.cmake
       - run: ctest -VV -S .gitlab/ci/ctest_build.cmake
       - run: ctest -C $env:CMAKE_BUILD_TYPE -VV -S .gitlab/ci/ctest_test.cmake
+
+  macos:
+    needs: format
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-14]
+    env:
+      CMAKE_BUILD_TYPE: Release
+      CMAKE_GENERATOR: 'Unix Makefiles'
+      VISKORES_SETTINGS: serial
+      CTEST_EXCLUSIONS: >-
+        UnitTestMathSERIAL
+        smoke_test_make_built_against_test_install
+        smoke_test_pkgconfig_make_built_against_test_install
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - if: github.event_name == 'pull_request'
+        run: echo ${{ github.event.pull_request.head.sha }} > ORIGINAL_COMMIT_SHA
+
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
+
+      - name: Apply GITHUB adaptor
+        run: |
+          cmake --version
+          cmake -V -P .github/ci/github_adaptor.cmake
+
+      - name: Setup Variables
+        run: |
+          env
+          cmake -V -P .gitlab/ci/config/gitlab_ci_setup.cmake
+      - run: ctest -VV -S .gitlab/ci/ctest_configure.cmake
+      - run: ctest -VV -S .gitlab/ci/ctest_build.cmake
+      - run: ctest -VV -S .gitlab/ci/ctest_test.cmake
