--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,63 +20,76 @@
 
 .docker_image: &docker_image
   variables:
-    GIT_SUBMODULE_STRATEGY: recursive
     CCACHE_DIR: "$CI_PROJECT_DIR/.ccache"
-    # This is needed for some CUDA jobs
-    CUDA_MANAGED_FORCE_DEVICE_ALLOC: 1
+    CTEST_TIMEOUT: 1200
+    GIT_SUBMODULE_STRATEGY: recursive
+  image:
+    name: ubuntu
+    pull_policy: always
 
 .almalinux8: &almalinux8
-  image: "ghcr.io/viskores/viskores:ci-almalinux8-20250305-21932"
+  image:
+    name: "ghcr.io/viskores/viskores:ci-almalinux8-20250321"
   extends:
     - .docker_image
 
 .ubuntu2004: &ubuntu2004
-  image: "ghcr.io/viskores/viskores:ci-ubuntu2004-20250224-12297"
+  image:
+    name: "ghcr.io/viskores/viskores:ci-ubuntu2004-20250320"
   extends:
     - .docker_image
 
 .ubuntu2004_doxygen: &ubuntu2004_doxygen
-  image: "ghcr.io/viskores/viskores:ci-ubuntu2004_doxygen-20250224-12297"
+  image:
+    name: "ghcr.io/viskores/viskores:ci-ubuntu2004_doxygen-20250320"
   extends:
     - .docker_image
 
 .ubuntu2004_cuda: &ubuntu2004_cuda
-  image: "ghcr.io/viskores/viskores:ci-ubuntu2004_cuda11.8-20250224-12297"
+  image:
+    name: "ghcr.io/viskores/viskores:ci-ubuntu2004_cuda11.8-20250320"
   extends:
     - .docker_image
 
 .ubuntu2004_kokkos: &ubuntu2004_kokkos
-  image: "ghcr.io/viskores/viskores:ci-ubuntu2004_kokkos-20250224-12297"
+  image:
+    name: "ghcr.io/viskores/viskores:ci-ubuntu2004_kokkos-20250320"
   extends:
     - .docker_image
 
 .ubuntu2204: &ubuntu2204
-  image: "ghcr.io/viskores/viskores:ci-ubuntu2204-20250225-24892"
+  image:
+    name: "ghcr.io/viskores/viskores:ci-ubuntu2204-20250320"
   extends:
     - .docker_image
 
 .ubuntu2204_cuda: &ubuntu2204_cuda
-  image: "ghcr.io/viskores/viskores:ci-ubuntu2204_cuda12.2-20250224-12297"
+  image:
+    name: "ghcr.io/viskores/viskores:ci-ubuntu2204_cuda12.2-20250320"
   extends:
     - .docker_image
 
 .ubuntu2204_cuda_kokkos: &ubuntu2204_cuda_kokkos
-  image: "ghcr.io/viskores/viskores:ci-ubuntu2204_kokkos_cuda-20250224-12297"
+  image:
+    name: "ghcr.io/viskores/viskores:ci-ubuntu2204_kokkos_cuda-20250320"
   extends:
     - .docker_image
 
 .ubuntu2204_hip_kokkos: &ubuntu2204_hip_kokkos
-  image: "ghcr.io/viskores/viskores:ci-ubuntu2204_kokkos_hip-20250224-12297"
+  image:
+    name: "ghcr.io/viskores/viskores:ci-ubuntu2204_kokkos_hip-20250320"
   extends:
     - .docker_image
 
 .ubuntu2404: &ubuntu2404
-  image: "ghcr.io/viskores/viskores:ci-ubuntu2404-20250224-12297"
+  image:
+    name: "ghcr.io/viskores/viskores:ci-ubuntu2404-20250320"
   extends:
     - .docker_image
 
 .opensuse: &opensuse
-  image: "ghcr.io/viskores/viskores:ci-opensuse-20250221-a"
+  image:
+    name: "ghcr.io/viskores/viskores:ci-opensuse-20250320"
   extends:
     - .docker_image
 
@@ -115,6 +128,11 @@
     - if: '$CI_PROJECT_PATH == "ci/ums033/dev/vtk-m"'
       when: on_success
     - when: never
+
+.uo_cpu_tags: &uo_cpu_tags
+  tags:
+    - hpsf
+    - hpsf-x86_64
 
 # General Longer Term Tasks:
 # - Setup clang tidy as sub-pipeline
