--- a/.github/workflows/external.yml
+++ b/.github/workflows/external.yml
@@ -20,4 +20,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: vicentebolea/cdash-status@v1
-        project: Viskores
+        with:
+          project: Viskores
