--- a/docs/CODEOWNERS
+++ b/docs/CODEOWNERS
@@ -1,24 +1,23 @@
-# Subsystems have specific owners
-
-
-CMake/                                      @robertmaynard
-data/                                       @dpugmire
-docs/                                       @robertmaynard @kmorel
-examples/                                   @kmorel
-Utilities/                                  @kmorel
-viskores/                                       @robertmaynard @kmorel
-viskores/interop/                               @robertmaynard
-viskores/io/                                    @sujin.philip
-viskores/rendering/                             @mclarsen
-viskores/source/                                @robertmaynard @ollielo
-viskores/testing/                               @sujin.philip
-viskores/thirdparty/                            @ben.boeckel
+.github/                                        @vicentebolea
+.gitlab-ci.yml                                  @vicentebolea
+.gitlab/                                        @vicentebolea
+CMake/                                          @vicentebolea
+data/                                           @dpugmire
+docs/                                           @kmorel
+examples/                                       @kmorel
+Utilities/                                      @kmorel @vicentebolea
+viskores/interop/                               @jeffamstutz
+viskores/io/                                    @kmorel
+viskores/rendering/                             @nicolemarsaglia
+viskores/                                       @kmorel
+viskores/source/                                @ollielo
+viskores/testing/                               @kmorel
+viskores/thirdparty/                            @vicentebolea
 viskores/worklet/cellmetrics/                   @hankchilds
-viskores/worklet/contourtree/                   @oruebel @ghweber @sujin.philip
-viskores/worklet/contourtree_augmented/         @oruebel @ghweber @sujin.philip
+viskores/worklet/contourtree_augmented/         @oruebel @ghweber
+viskores/worklet/contourtree/                   @oruebel @ghweber
 viskores/worklet/cosmotools/                    @ollielo
 viskores/worklet/lcs/                           @ayenpure @dpugmire
-viskores/worklet/moments/                       @ollielo @robertmaynard
+viskores/worklet/moments/                       @ollielo
 viskores/worklet/particleadvection              @ayenpure @dpugmire
 viskores/worklet/spatialstructure               @ayenpure @kmorel
-viskores/worklet/zfp                            @mclarsen
