ci,cdash: use cdash-status@latest

--- a/.github/workflows/external.yml
+++ b/.github/workflows/external.yml
@@ -18,6 +18,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: vicentebolea/cdash-status@latest
+      - uses: vicentebolea/cdash-status@release
         with:
           project: Viskores
