--- a/viskores/cont/CMakeLists.txt
+++ b/viskores/cont/CMakeLists.txt
@@ -87,6 +87,7 @@ set(headers
   ColorTableSamples.h
   ConvertNumComponentsToOffsets.h
   CoordinateSystem.h
+  CubicHermiteSpline.h
   DataSet.h
   DataSetBuilderCurvilinear.h
   DataSetBuilderExplicit.h
@@ -205,6 +206,7 @@ set(device_sources
   CellSetExtrude.cxx
   ColorTable.cxx
   ConvertNumComponentsToOffsets.cxx
+  CubicHermiteSpline.cxx
   Field.cxx
   internal/ArrayCopyUnknown.cxx
   internal/ArrayRangeComputeUtils.cxx
