--- a/viskores/cont/testing/CMakeLists.txt
+++ b/viskores/cont/testing/CMakeLists.txt
@@ -112,6 +112,7 @@ set(unit_tests_device
   UnitTestCellSetExplicit.cxx
   UnitTestCellSetPermutation.cxx
   UnitTestColorTable.cxx
+  UnitTestCubicHermiteSpline.cxx
   UnitTestDataSetPermutation.cxx
   UnitTestDataSetSingleType.cxx
   UnitTestDeviceAdapterAlgorithmDependency.cxx
