update the license for each file.

--- a/viskores/exec/CMakeLists.txt
+++ b/viskores/exec/CMakeLists.txt
@@ -37,6 +37,7 @@ set(headers
   ConnectivityExtrude.h
   ConnectivityPermuted.h
   ConnectivityStructured.h
+  CubicHermiteSpline.h
   FieldNeighborhood.h
   FunctorBase.h
   ParametricCoordinates.h
