--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -57,6 +57,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: "Viskores/viskores-doxygen"
+          persist-credentials: true
           token: ${{ secrets.DOXYGEN_TOKEN }}
 
       - uses: actions/download-artifact@v4
@@ -67,6 +68,7 @@ jobs:
           git config --global --add safe.directory "${PWD}"
           git config --global user.name viskores-robot
           git config --global user.email "${GITHUB_ACTOR}+github-actions[bot]@users.noreply.github.com"
+          git remote set-url origin "https://${{ secrets.DOXYGEN_TOKEN }}@github.com/Viskores/viskores-doxygen.git"
           git add -A
           git commit -am "${GITHUB_SHA}"
           git push
