--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -19,7 +19,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  generate:
+  build:
     runs-on: ubuntu-latest
     container:
       image: "kitware/vtkm:ci-doxygen-20231020"
@@ -46,7 +46,7 @@ jobs:
           overwrite: true
   push:
     if: github.event_name != 'pull_request'
-    needs: [generate]
+    needs: [build]
     runs-on: ubuntu-latest
     container:
       image: "kitware/vtkm:ci-doxygen-20231020"
@@ -57,18 +57,15 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: "Viskores/viskores-doxygen"
-          persist-credentials: true
           token: ${{ secrets.DOXYGEN_TOKEN }}
 
       - uses: actions/download-artifact@v4
         with:
           name: doxygen-pages-${{ github.sha }}
-
       - run: |
           git config --global --add safe.directory "${PWD}"
           git config --global user.name viskores-robot
           git config --global user.email "${GITHUB_ACTOR}+github-actions[bot]@users.noreply.github.com"
-          git remote set-url origin "https://${{ secrets.DOXYGEN_TOKEN }}@github.com/Viskores/viskores-doxygen.git"
           git add -A
           git commit -am "${GITHUB_SHA}"
           git push
