--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -67,5 +67,5 @@ jobs:
           git config --global user.name viskores-robot
           git config --global user.email "${GITHUB_ACTOR}+github-actions[bot]@users.noreply.github.com"
           git add -A
-          git commit -am "${GITHUB_SHA}"
+          git commit --allow-empty --all --message "${GITHUB_SHA}"
           git push
