--- a/.gitlab/ci/sync-spack.yml
+++ b/.gitlab/ci/sync-spack.yml
@@ -17,3 +17,5 @@ include:
       prereq_check: format
       status_context: "Frank CI"
       sync_draft_prs: true
+    rules:
+      - if: $CI_SERVER_HOST == "gitlab.spack.io"
