--- a/.gitlab/ci/frontier.yml
+++ b/.gitlab/ci/frontier.yml
@@ -23,12 +23,18 @@ default:
     OLCF_ID_TOKEN:
       aud: https://code.olcf.ornl.gov
 
+.frontier-common:
+  variables:
+    CUSTOM_CI_BUILDS_DIR: "/lustre/orion/ums033/scratch/ums033_auser/ci/viskores/runtime"
+    OLCF_SERVICE_ACCOUNT: "ums033_auser"
+
 # Ad-hoc build that runs in the ECP Hardware, concretely in OLCF Spock.
 .frontier_gcc_hip:
+  extends:
+    .frontier-common
   variables:
     CCACHE_BASEDIR:          "/lustre/orion/ums033/scratch/"
     CCACHE_DIR:              "/lustre/orion/ums033/scratch/ums033_auser/ci/viskores/ccache"
-    CUSTOM_CI_BUILDS_DIR:    "/lustre/orion/ums033/scratch/ums033_auser/ci/viskores/runtime"
 
     # -isystem= is not affected by CCACHE_BASEDIR, thus we must ignore it
     CCACHE_IGNOREOPTIONS:    "-isystem=*"
@@ -135,3 +141,49 @@ test:frontier_gcc_hip:
     - ctest -VV -S .gitlab/ci/ctest_submit_build.cmake
     - ctest -VV -S .gitlab/ci/ctest_submit_test.cmake
   timeout: 150 minutes
+
+.report-status:
+  tags: [ shell ]
+  extends:
+    .frontier-common
+  variables:
+    STATUS_PROJECT: Viskores/viskores
+    STATUS_NAME: OLCF Frontier
+  script: >
+    curl -X POST -H "${GITHUB_CURL_HEADERS}"
+    "https://api.github.com/repos/${STATUS_PROJECT}/statuses/${CI_COMMIT_SHA}"
+    -d "{\"state\":\"${PIPELINE_STATE}\", \"context\":\"${STATUS_NAME}\",\"target_url\":\"${CI_PIPELINE_URL}\",\"description\":\"${PIPELINE_DESCRITION}\"}"
+  environment:
+    name: report-$CI_COMMIT_SHA
+
+pending:
+  stage: .pre
+  variables:
+    PIPELINE_DESCRITION: Pipeline is running
+    PIPELINE_STATE: pending
+  extends:
+    - .report-status
+
+success:
+  stage: .post
+  variables:
+    PIPELINE_DESCRITION: Pipeline succeeded
+    PIPELINE_STATE: success
+  extends:
+    - .report-status
+  dependencies:
+    - build:frontier_gcc_hip
+    - test:frontier_gcc_hip
+
+failure:
+  stage: .post
+  rules:
+    - when: on_failure
+  variables:
+    PIPELINE_DESCRITION: Pipeline failed
+    PIPELINE_STATE: failure
+  extends:
+    - .report-status
+  dependencies:
+    - build:frontier_gcc_hip
+    - test:frontier_gcc_hip
