--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,13 @@
 
 .docker_image: &docker_image
   variables:
+    CCACHE_BASEDIR: "${CI_PROJECT_DIR}"
+    CCACHE_COMPILERCHECK: "content"
     CCACHE_DIR: "$CI_PROJECT_DIR/.ccache"
-    CCACHE_RESHARE: "true"
+    CCACHE_HASHDIR: "true"
+    CCACHE_NAMESPACE: "${CI_PROJECT_PATH}/${CI_JOB_NAME}"
+    CCACHE_SLOPPINESS: "include_file_mtime,time_macros"
+    CCACHE_MAXSIZE: "250MiB"
     CTEST_TIMEOUT: 1200
     GIT_SUBMODULE_STRATEGY: recursive
   image:
@@ -163,8 +168,18 @@ stages:
   stage: build
   timeout:  2 hours
   interruptible: true
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      variables:
+        GITLAB_CACHE_POLICY: pull-push
+        CCACHE_RESHARE: "true"
+    - if: $CI_COMMIT_BRANCH != $CI_DEFAULT_BRANCH
+      variables:
+        GITLAB_CACHE_POLICY: pull
+        CCACHE_RESHARE: "false"
   cache:
     key: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
+    policy: $GITLAB_CACHE_POLICY
     fallback_keys:
       - "$CI_JOB_NAME-main"
     paths:
