--- a/CTestCustom.cmake.in
+++ b/CTestCustom.cmake.in
@@ -56,6 +56,11 @@ list(APPEND CTEST_CUSTOM_WARNING_EXCEPTION
   # OLCF Ascent/Summit
   ".*viskores/thirdparty.*"
 
+  # Disable warning that can happen in the standard lib from the loguru
+  # third party library. This is a note that can get flagged because it
+  # happens in a file outside of the thirdparty directory.
+  ".*'__builtin___snprintf_chk' output between 5 and 12 bytes.*"
+
   ".*warning: template-id not allowed for constructor.*"
 )
 
